libosso (1.18-1) unstable; urgency=low

  * UNRELEASED
  * Added postinst script for calling ldconfig.
  * Fixed problems in supporting non-com.nokia-prefixed services.
    Fixes: NB#31831, NB#32067
  * Added more warning flags to compilation and fixed warnings.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 12 Sep 2006 18:08:55 +0300

libosso (1.17-1) unstable; urgency=low

  * Added detailed instructions for implementing state saving and autosaving
    to libosso.h (finally).
  * Fixed sometimes occurring infinite loop in _read_state() and added
    some missing EINTR handling. Fixes: NB#38937

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 04 Sep 2006 19:30:51 +0300

libosso (1.16-1) unstable; urgency=low

  * Modified Control Panel plugin startup so that single instance can be
    achieved. The patch came from Johan Bilien. Fixes: NB#25238
  * Fixed several possible memory leaks in osso-rpc.c. Fixes: NB#34403
  * Fixed the osso_time_set() to actually send a signal about time change.
    Fixes: NB#35824
  * Fixed compilation problem with GCC4.1. Fixes: NB#33996
  * Fixed parameter check in osso_display_blanking_pause(). Fixes: NB#36576
  * Fixed parameter check in osso_display_state_on(). Fixes: NB#36578
  * Fixed OSSO_CFLAGS so that it preserves debug symbols as it should
    (dh_strip will strip them for right packages anyway).
  * Added two small test executables to the ut directory.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 10 Aug 2006 17:53:57 +0300

libosso (1.15-1) unstable; urgency=low

  * Removed dbus_connection_unref()s, because they make DBus asserts fail
    Fixes: NB#32642.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 14 Jun 2006 14:39:33 +0300

libosso (1.14-1) unstable; urgency=low

  * Fixed osso_mem_saw to use the high watermark instead of the deny watermark
    (N#32122).
  * New function osso_mem_in_lowmem_state().

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 08 Jun 2006 15:27:32 +0300