@@ -5,6 +5,8 @@ libosso (1.18-1) unstable; urgency=low
   * Fixed problems in supporting non-com.nokia-prefixed services.
     Fixes: NB#31831, NB#32067
   * Added more warning flags to compilation and fixed warnings.
+  * Added optimisation to service registration so that registering the
+    default service name is not tried more than once.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 12 Sep 2006 18:08:55 +0300
 
